Archive2/9e/5ce45888b6fc94/output
main.cpp: In function 'bool FindRep(std::string&)':
main.cpp:85:9: error: 'i' was not declared in this scope
     for(i = fractional.find(sub,0); i != string::npos; i = fractional.find(sub,i)) {
         ^
main.cpp:85:42: error: 'string' has not been declared
     for(i = fractional.find(sub,0); i != string::npos; i = fractional.find(sub,i)) {
                                          ^
